--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -233,6 +233,7 @@ article, .comments, .box {
     .site-icon {
       width: 50px;
       height: 50px;
+      padding: 10px;
       margin-top: -25px; } }
 
 .site-nav {
